// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all: "" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`all: "a" 1`] = `
Object {
  "expected": Array [
    "b",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`all: "aa" 1`] = `
Object {
  "expected": Array [
    "b",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`all: "aaaa" 1`] = `
Object {
  "expected": Array [
    "b",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`all: "abb" 1`] = `
Object {
  "expected": Array [
    "c",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`all: "abc" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "b",
    "c",
  ],
}
`;

exports[`all: "b" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`and failure: "" 1`] = `
Object {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`and failure: "x" 1`] = `
Object {
  "expected": Array [
    "y",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`and failure: "y" 1`] = `
Object {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`and failure: "yx" 1`] = `
Object {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`and success triple 2: "xyz" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "x",
    "y",
    "z",
  ],
}
`;

exports[`and triple: "xyz" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    Array [
      "x",
      "y",
    ],
    "z",
  ],
}
`;

exports[`and: "xy" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "x",
    "y",
  ],
}
`;

exports[`choice: "" 1`] = `
Object {
  "expected": Array [
    "a",
    "b",
    "c",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`choice: "a" 1`] = `
Object {
  "type": "ParseOK",
  "value": "a",
}
`;

exports[`choice: "aaaa" 1`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`choice: "abb" 1`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`choice: "b" 1`] = `
Object {
  "type": "ParseOK",
  "value": "b",
}
`;

exports[`choice: "c" 1`] = `
Object {
  "type": "ParseOK",
  "value": "c",
}
`;

exports[`desc: "9" 1`] = `
Object {
  "type": "ParseOK",
  "value": 9,
}
`;

exports[`desc: "x" 1`] = `
Object {
  "expected": Array [
    "number",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`emoji length: "🙂🙂🙂" 1`] = `
Object {
  "type": "ParseOK",
  "value": Object {
    "end": Object {
      "column": 4,
      "index": 6,
      "line": 1,
    },
    "name": "Emoji",
    "start": Object {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "ParseNode",
    "value": "🙂🙂🙂",
  },
}
`;

exports[`fail: "bad" 1`] = `
Object {
  "expected": Array [
    "apple",
    "banana",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`fail: "bad" 2`] = `
Object {
  "expected": Array [
    "other",
    "apple",
    "banana",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`lazy: "(x x (x () (x) ((x)) x) x)" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "x",
    "x",
    Array [
      "x",
      Array [],
      Array [
        "x",
      ],
      Array [
        Array [
          "x",
        ],
      ],
      "x",
    ],
    "x",
  ],
}
`;

exports[`lisp lists: "(a b c)" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "b",
    "c",
  ],
}
`;

exports[`match: "12" 1`] = `
Object {
  "type": "ParseOK",
  "value": "12",
}
`;

exports[`match: "abc" 1`] = `
Object {
  "expected": Array [
    "/\\\\d+/",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`matchEOF: "" 1`] = `
Object {
  "type": "ParseOK",
  "value": "<EOF>",
}
`;

exports[`matchEOF: "x" 1`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`next: "" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`next: "a" 1`] = `
Object {
  "expected": Array [
    "b",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`next: "ab" 1`] = `
Object {
  "type": "ParseOK",
  "value": "b",
}
`;

exports[`next: "aba" 1`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`next: "b" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`node: "A\\nB\\nC" 1`] = `
Object {
  "type": "ParseOK",
  "value": Object {
    "end": Object {
      "column": 2,
      "index": 5,
      "line": 3,
    },
    "name": "ABC",
    "start": Object {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "ParseNode",
    "value": "A
B
C",
  },
}
`;

exports[`node: "abc" 1`] = `
Object {
  "type": "ParseOK",
  "value": Object {
    "end": Object {
      "column": 4,
      "index": 3,
      "line": 1,
    },
    "name": "Identifier",
    "start": Object {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "ParseNode",
    "value": "abc",
  },
}
`;

exports[`or: "" 1`] = `
Object {
  "expected": Array [
    "a",
    "b",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`or: "a" 1`] = `
Object {
  "type": "ParseOK",
  "value": "a",
}
`;

exports[`or: "ab" 1`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`or: "b" 1`] = `
Object {
  "type": "ParseOK",
  "value": "b",
}
`;

exports[`or: "c" 1`] = `
Object {
  "expected": Array [
    "a",
    "b",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`repeat 0+: "" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [],
}
`;

exports[`repeat 0+: "a" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
  ],
}
`;

exports[`repeat 0+: "aa" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`repeat 0+: "aaa" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`repeat 0+: "aaaa" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
    "a",
  ],
}
`;

exports[`repeat 0+: "b" 1`] = `
Object {
  "expected": Array [
    "a",
    "<EOF>",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`repeat 1+: "" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`repeat 1+: "a" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
  ],
}
`;

exports[`repeat 1+: "aa" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`repeat 1+: "aaa" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`repeat 1+: "aaaa" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
    "a",
  ],
}
`;

exports[`repeat 1+: "b" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`repeat 2-3: "" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`repeat 2-3: "a" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`repeat 2-3: "aa" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`repeat 2-3: "aaa" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`repeat 2-3: "aaaa" 1`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 4,
    "index": 3,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`repeat 2-3: "b" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy 0+: "" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [],
}
`;

exports[`sepBy 0+: "a" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
  ],
}
`;

exports[`sepBy 0+: "a,a" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`sepBy 0+: "a,a,a" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`sepBy 0+: "a,a,b" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 5,
    "index": 4,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy 0+: "b" 1`] = `
Object {
  "expected": Array [
    "a",
    "<EOF>",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy 1+: "" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy 1+: "a" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
  ],
}
`;

exports[`sepBy 1+: "a,a" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`sepBy 1+: "a,a,a" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`sepBy 1+: "a,a,b" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 5,
    "index": 4,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy 1+: "b" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy 1-1: "" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy 2-3: "" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy 2-3: "a" 1`] = `
Object {
  "expected": Array [
    ",",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy 2-3: "a,a" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`sepBy 2-3: "a,a,a" 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`sepBy 2-3: "a,a,a,a" 1`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 6,
    "index": 5,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy 2-3: "a,a,b" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 5,
    "index": 4,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy 2-3: "b" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`skip: "" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`skip: "a" 1`] = `
Object {
  "expected": Array [
    "b",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`skip: "ab" 1`] = `
Object {
  "type": "ParseOK",
  "value": "a",
}
`;

exports[`skip: "aba" 1`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`skip: "b" 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`test a test: "x" 1`] = `
Object {
  "type": "ParseOK",
  "value": "x",
}
`;

exports[`trim: "~" 1`] = `
Object {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`trim: "~x" 1`] = `
Object {
  "expected": Array [
    "~",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`trim: "~x~" 1`] = `
Object {
  "type": "ParseOK",
  "value": "x",
}
`;

exports[`trim: "x>" 1`] = `
Object {
  "expected": Array [
    "~",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`wrap: "<" 1`] = `
Object {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`wrap: "<x" 1`] = `
Object {
  "expected": Array [
    ">",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`wrap: "<x>" 1`] = `
Object {
  "type": "ParseOK",
  "value": "x",
}
`;

exports[`wrap: "x>" 1`] = `
Object {
  "expected": Array [
    "<",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;
